# py_sovd_server

./: .gitignore  MANIFEST.in  Makefile  README.md  debug_entity.py  debug_server.py  debug_test.py  enhanced_server.py  pyproject.toml  requirements.txt  requirements_enhanced.txt  run_enhanced_server.py  setup.py  test_config.py  test_endpoints.py  test_server_config.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml
config/entities/: areas.yaml  components.yaml
config/resources/data/: ecu_data_resources.yaml
config/resources/modes/: ecu_modes.yaml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  INDEX.md  SECURITY.md  TESTING.md  VERSIONING.md
generated_server/: Dockerfile  README.md  debug_enhanced_routes.py  debug_test.py  enhanced_server.py  pyproject.toml  setup.py  simple_server.py  test_server.py  tox.ini
generated_server/.openapi-generator/: FILES
generated_server/config/entities/: apps.yaml
generated_server/config/resources/data/: ecu_data_resources.yaml
generated_server/config/resources/faults/: engine_faults.yaml
generated_server/config/resources/operations/: ecu_operations.yaml
generated_server/sovd_server/: __main__.py  encoder.py  util.py
generated_server/sovd_server/controllers/: default_controller.py  security_controller.py
generated_server/sovd_server/models/: base_model.py  configuration.py  configuration_reference.py  configuration_write.py  cyclic_subscription_update.py  data_list.py  data_list_collection.py  data_list_create.py  data_list_reference.py  data_resource.py  data_resource_collection.py  data_resource_reference.py  data_resource_write.py  entity_reference.py  environment_data.py  error.py  execution_collection.py  execution_reference.py  extended_data_records.py  fault_collection.py  fault_status.py  mode_reference.py  mode_set.py  operation_collection.py  operation_execution.py  operation_execution_modify.py  operation_execution_request.py  script.py  script_collection.py  script_execution.py  script_execution_collection.py  script_execution_reference.py  snapshot_data.py  trigger_collection.py  trigger_condition_values_inner.py  trigger_create.py  version.py  version_info.py
generated_server/sovd_server/test/: test_default_controller.py
scripts/: build_resolve_symlinks.sh  curl_iso_dis_17978_examples.sh  generate_from_openapi.sh
scripts/publish/: README.md  publish_to_pypi.sh
src/sovd_server/: __init__.py  config_loader.py  controllers  data_write_runtime.py  encoder.py  enhanced_server.py  execution_runtime.py  fault_builder.py  models  parse_pdf.py  resource_response.py  run_enhanced_server.py  sovd-api.yaml  typing_utils.py  update_runtime.py  util.py
src/sovd_server/config/entities/: components.yaml
src/sovd_server/config/resources/data/: ecu_data_resources.yaml
src/sovd_server/config/resources/faults/: ecu_faults.yaml
tests/: __init__.py  conftest.py  debug_enhanced_routes.py  debug_entity.py  debug_routes.py  debug_server.py  debug_test.py  test_config.py  test_default_controller.py  test_e2e_enhanced_round_robin.py  test_e2e_iso_data_and_operations.py  test_endpoints.py  test_fault_builder.py  test_resource_response.py  test_server.py  test_server_config.py
