[tool.poetry]
name = "sovd-server"
version = "1.1.0"
description = "SOVD (Service-Oriented Vehicle Data) Server Implementation"
readme = "README.md"
license = "MIT"
authors = ["SOVD Development Team <dev@sovd.org>"]
packages = [{ include = "sovd_server", from = "src" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = ">=3.1.0"
flask-cors = ">=3.0.0"
pyyaml = ">=6.0"
connexion = { version = ">=3.0.0,<=3.3.0", extras = ["swagger-ui"] }
jsonschema = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2"
pytest-cov = "*"
black = "*"
flake8 = "*"
mypy = "*"
bandit = "*"
safety = "*"

[tool.poetry.scripts]
sovd-server = "sovd_server.run_enhanced_server:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | src/sovd_server/models
  | src/sovd_server/controllers
  | src/sovd_server/util\.py
  | src/sovd_server/typing_utils\.py
  | src/sovd_server/encoder\.py
  | generated
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
